--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,9 +94,13 @@ a {
   background-color: #182E4A;
 }
 #secfour {
-  padding: 70px 0px;
+  padding-top: 70px;
+  padding-bottom: 120px;
   /*background-color: white;*/
   background-color: #CE3E3E;
+}
+#achievements {
+  padding-top: 50px;
 }
 #sectwo div h1{
   color: grey;
@@ -122,7 +126,8 @@ a {
 }
 #secsix {
   text-align: center;
-  padding-top: 50px;
+  padding-top: 60px;
+  padding-bottom: 70px;
   background-color: #5E6A7A;
 }
 .secsixtext {
@@ -208,9 +213,6 @@ p {
   text-align: center;
   color: white;
   margin-bottom: 0px;
-}
-#icon {
-  padding-top: 40px;
 }
 footer {
   background-color: white;
